--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "hotpepper",
+  "name": "@0x4447/hotpepper",
   "version": "1.4.4",
   "description": "🌶 A SystemD config generators for NodeJS projects",
   "main": "index.js",
+  "scripts": {
+    "test": "mocha"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/0x4447/0x4447-node-cli-hot-pepper"
@@ -21,5 +24,8 @@
     "email": "hello@0x4447.com",
     "url": "https://0x4447.com"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "mocha": "4.1.0"
+  }
 }
