--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@0x4447/hotpepper",
-  "version": "1.4.13",
+  "version": "1.4.14",
   "description": "🌶 A SystemD config generators for NodeJS projects",
   "homepage": "https://0x4447.com/toolbox",
   "main": "index.js",
@@ -34,6 +34,7 @@
     "service"
   ],
   "dependencies": {
+    "commander": "2.15.1",
     "mocha": "4.1.0"
   }
 }
